--- a/projects.json
+++ b/projects.json
@@ -17,7 +17,7 @@
   {
     "projectId": 1,
     "name": "L.A.R.A.",
-    "category": "Mobile,
+    "category": "Mobile",
     "description": "Learning and Achievement Records App",
     "features": [
       "Skills Tree",
